--- a/static/style.css
+++ b/static/style.css
@@ -150,9 +150,11 @@ body {
 /* ############# SCREENS ############# */
 
 /* --------- MAIN MENU --------- */
-.mainMenu {
+.mainMenu {    
     width: 100%;
     height: 100%;
+
+    flex-direction: column;
 
     border-radius: 20px;
 
@@ -161,6 +163,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-color: white;
+
 }
 
 .gameLogo {
@@ -567,5 +570,15 @@ p {
 
     .gameButtons {
         top: 30%;
+    }
+}
+
+@media screen and (max-width: 1280px){
+    .gameLogo{
+        margin: 3rem 2rem 3rem;   
+    }
+
+    .language{
+        margin: 0;
     }
 }
